// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-8-48 MuiGrid-grid-md-6-59"
    style={
      Object {
        "margin": "0 auto",
      }
    }
  >
    <div
      className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
    >
      <div
        className="MuiCardContent-root-120"
      >
        <form
          onSubmit={undefined}
        >
          <div
            label="Nome"
            name="firstName"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Sobrenome"
            name="lastName"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Email"
            name="email"
            type="email"
          >
            Text Field
          </div>
          <div
            label="Sobre você"
            multiline={true}
            name="bio"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Cidade"
            name="city"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Estado"
            name="state"
            type="text"
          >
            Text Field
          </div>
          <div
            label="País"
            name="country"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Empresa / Organização"
            name="company"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Cargo"
            name="workTitle"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Site"
            name="website"
            type="text"
          >
            Text Field
          </div>
          <div
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <button
              className="MuiButtonBase-root-137 MuiButton-root-121 MuiButton-raised-127 MuiButton-raisedPrimary-128"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="submit"
            >
              <span
                className="MuiButton-label-122"
              >
                Atualizar perfil
              </span>
              <span
                className="MuiTouchRipple-root-140"
              />
            </button>
          </div>
          <div
            style={
              Object {
                "padding": 20,
                "textAlign": "center",
              }
            }
          >
            <h1
              className="MuiTypography-root-147 MuiTypography-headline-152 MuiTypography-colorError-170"
            >
              foo-error
            </h1>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`when updating renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-8-48 MuiGrid-grid-md-6-59"
    style={
      Object {
        "margin": "0 auto",
      }
    }
  >
    <div
      className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
    >
      <div
        className="MuiCardContent-root-120"
      >
        <form
          onSubmit={undefined}
        >
          <div
            label="Nome"
            name="firstName"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Sobrenome"
            name="lastName"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Email"
            name="email"
            type="email"
          >
            Text Field
          </div>
          <div
            label="Sobre você"
            multiline={true}
            name="bio"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Cidade"
            name="city"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Estado"
            name="state"
            type="text"
          >
            Text Field
          </div>
          <div
            label="País"
            name="country"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Empresa / Organização"
            name="company"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Cargo"
            name="workTitle"
            type="text"
          >
            Text Field
          </div>
          <div
            label="Site"
            name="website"
            type="text"
          >
            Text Field
          </div>
          <div
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <div
              className="MuiCircularProgress-root-171 MuiCircularProgress-colorPrimary-174 MuiCircularProgress-indeterminate-173"
              role="progressbar"
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <svg
                className="MuiCircularProgress-svg-176"
                viewBox="0 0 50 50"
              >
                <circle
                  className="MuiCircularProgress-circle-177 MuiCircularProgress-circleIndeterminate-179"
                  cx={25}
                  cy={25}
                  fill="none"
                  r={20}
                  strokeWidth={3.6}
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "padding": 20,
                "textAlign": "center",
              }
            }
          >
            <h1
              className="MuiTypography-root-147 MuiTypography-headline-152 MuiTypography-colorError-170"
            >
              foo-error
            </h1>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
